# unicorn-tools

./: .gitignore  CLAUDE.md  flake.nix
extensions/window-list-dbus@unicorn/: extension.js  metadata.json
firmware/3ds/: .gitignore
firmware/3ds/launcher/: Makefile
firmware/3ds/launcher/source/: main.c  svc.s
firmware/3ds/plugin/: CTRPluginFramework.plgInfo
firmware/3ds/plugin/Sources/: main.cpp  main.cpp.bak
firmware/3ds/sysmodule/: Makefile  cosmic_stream.cfg.example  cosmic_stream.rsf
firmware/3ds/sysmodule/source/: main.c
firmware/cosmic/: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  deploy.sh  hypercube.html  hypercube.lua  hyprcube.html  shader_editor.html
firmware/cosmic/extra/: hyprcube-frame.lua  hyprcube.html  hyprcube.js  hyprcube.lua  hyprcube_bench.lua  hyprcube_fps.lua
firmware/cosmic/src/: board_config.cpp  board_config.hpp  builtin_shaders.hpp  http_server.cpp  http_server.hpp  http_server_lite.cpp  main.cpp  main_lite.cpp  shader_lua.cpp  shader_lua.hpp
nix/: 3ds.nix  pico.nix  tools.nix
tools/: cosmic_cast.py  cosmic_mock.py  cosmic_mock_term.py  perf_test.py  rez_model_preview.py  serial_stream.py  shader_editor.html
